2025-01-09 v1.15.1 "Wigeon Duck"
  This release bumps up the SO major version and fixes the language about ABI
  compatibility in the previous release changelog.

2024-10-22 v1.15.0 "Wigeon Duck"
  This release includes new codec control for key frame filtering, more Neon
  optimizations, improvements to RTC encoding and bug fixes.

  - Upgrading:
    This release is ABI incompatible with the previous release.

    It is strongly recommended to skip this release and upgrade to v1.15.1 since
    the shared object was versioned incorrectly, as shown in
    https://issues.webmproject.org/issues/384672478.

    Temporal filtering improvement that can be turned on with the new codec
    control VP9E_SET_KEY_FRAME_FILTERING, which gives 1+% BD-rate saving with
    minimal encoder time increase.

    libwebm is upgraded to libwebm-1.0.0.31-10-g3b63004

  - Enhancement:
    Neon optimization speed up
      1-3% speed up across speed 5 to 10 for RTC
      3% speed up for speed 0 and 1 for VoD in standard bitdepth
      3% and 7% speed up for speed 0 and 1 respectively for VoD in high bitdepth
    Scene detection is allowed for all RTC speeds (>=5)
    Support profile guided optimizations

    Delta quantization parameters for UV channels for vp8 is supported in RTC
    rate control library

    Rate control parameters are reset and maximum QP is enforced on scene
    changes in SVC when there is no inter-layer prediction

  - Bug fixes:
    Fix to Uninitialized scalar variable in `vp9_rd_pick_inter_mode_sb()`
    Fix to Integer-overflow in `resize_multistep`
    Fix to Heap-buffer-overflow in `vpx_sad64x64_avx2`
    Fix to Crash in `vpx_sad8x8_sse2`
    Fix to Assertion in `write_modes`
    Support profile guided optimizations
    Fix to Integer-overflow in `encode_frame_to_data_rate`
    Fix to Integer-overflow in `vp9_svc_check_reset_layer_rc_flag`
    Fix to core dump error from /usr/bin/tools/tiny_ssim --help