@@ -3,9 +3,9 @@
 #define VPX_VERSION_H_
 #define VERSION_MAJOR  1
 #define VERSION_MINOR  15
-#define VERSION_PATCH  1
+#define VERSION_PATCH  2
 #define VERSION_EXTRA  ""
 #define VERSION_PACKED ((VERSION_MAJOR<<16)|(VERSION_MINOR<<8)|(VERSION_PATCH))
-#define VERSION_STRING_NOSP "v1.15.1"
-#define VERSION_STRING      " v1.15.1"
+#define VERSION_STRING_NOSP "v1.15.2"
+#define VERSION_STRING      " v1.15.2"
 #endif  // VPX_VERSION_H_
